# AtOS

./: .gitignore  Cargo.toml  LICENSE  Makefile  atos_intro.txt  build.rs  dump.txt  entry.S  kernel8.img  linker.ld  output.txt
src/: main.rs
src/kernel/: elf.rs  exceptions.rs  exceptions.s  filesystem.rs  input.rs  interrupts.rs  io.rs  kernelstack.rs  mod.rs  mutex.rs  paging.rs  peripherals.rs  processes.rs  scheduler.rs  syscalls.rs  timer.rs  utils.rs
src/kernel/arch/: registers.rs
src/user/: Makefile  linker.ld
src/user/src/: lib.rs
src/user/src/stdlib/: mod.rs  syscalls.rs  syswraps.rs  wrappers.rs
